tests/neg-macros/annot-mod-top-method-add-top-method/Test_2.scala
@addTopLevelMethodOutsidePackageObject // error
def foo = 1

@addTopLevelMethodOutsidePackageObject // error
val bar = 1
